# acit5930_23

terrain_characterizer/: CMakeLists.txt  package.xml
terrain_characterizer/cfg/: algorithmParameters.cfg  rviz.rviz
terrain_characterizer/launch/: rs_camera.launch
terrain_characterizer/msg/: ErrorNav.msg  Errors.msg
terrain_characterizer/src/: depth_viewer.py  pointCloudPlaneFitter.cpp
terrain_nav/: CMakeLists.txt  README.md  model10000  modelRotResnet  package.xml
terrain_nav/cfg/: navParams.cfg
terrain_nav/launch/: record_bag.launch  robot_localization.launch  scout.launch  terrain_characterization.launch  traversability_estimation.launch
terrain_nav/rviz/: heightmap.rviz  rosbags.rviz  terrain_characterizer.rviz  traversability_estimation.rviz
terrain_nav/src/: data_bagger.py  graphs.py  heightmap.cpp  ml_test.py  parse_tests.py  pcconverter.cpp  predict.py  rosbag_parser.py  self_test.py  synth_data.py  terrain_gps_test.py  training.py
